[gd_scene load_steps=2 format=3 uid="uid://bxko3dru3t24k"]

[ext_resource type="Script" path="res://enemies_timers.gd" id="1_401w5"]

[node name="EnemiesTimers" type="Node"]
script = ExtResource("1_401w5")

[node name="ScatterDurationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ChaseDurationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="FrightenedDurationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="ScatterDurationTimer" to="." method="_on_scatter_duration_timer_timeout"]
[connection signal="timeout" from="ChaseDurationTimer" to="." method="_on_chase_duration_timer_timeout"]
